<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>path_display</name>
    <version>0.0.0</version>
    <description>Path Display</description>
    <maintainer email="chinchia120@gmail.com">chinchia120</maintainer>
    <license>POINT Lab</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2_ros</depend>

    <depend>coordinate_transform</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>