<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>velodyne_poser</name>
    <version>0.0.0</version>
    <description>Velodyne PointCloud2 Poser</description>
    <maintainer email="chinchia120@gmail.com">point-5070</maintainer>
    <license>POINT Lab</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
